--- a/TFG/decisiontree.ipynb
+++ b/TFG/decisiontree.ipynb
@@ -32,6 +32,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Carga de los archivos train y test y visualización del conjunto de prueba."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 93,
    "metadata": {},
@@ -53,7 +60,7 @@
     "test_data = pd.read_excel('test.xlsx')\n",
     "\n",
     "#Visualización de los datos del dataset \"test\"\n",
-    "#Primero contamos los alumnos aprobados y los alumnos suspensos\n",
+    "#Primero se cuentan los alumnos aprobados y los alumnos suspensos\n",
     "aprobados = test_data[test_data['nota_final_aprobado'] == 'SI'].shape[0]\n",
     "suspensos = test_data[test_data['nota_final_aprobado'] == 'NO'].shape[0]\n",
     "\n",
@@ -291,6 +298,31 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "CROSS-VALIDATION CON DIFERENTES CONFIGURACIONES\n",
+    "\n",
+    "Como se puede ver en la validación cruzada del apartado anterior, he definido 4 diferentes configuraciones para la clase:\n",
+    "\n",
+    "1.  None: no utiliza ninguna ponderación de clase, por lo que todos los casos en conjunto de datos tienen  la misma importancia durante el entrenamiento del modelo, sin importar la frecuencia de su clase.\n",
+    "2.  'balanced': para esta configuración de clase balanceada, scikit-learn ajusta los pesos de las clases automaticamente dependiendo de la frecuencia de las clases usando la fórmula: n_samples / (n_classes * np.bincount(y)), por lo que las clases con menos muestras reciben un mayor peso durante el entrenamiento del modelo.\n",
+    "3.  {0: 2, 1: 1}: en esta configuración he utilizado el diccionario {0: 2, 1: 1} para especificar un peso diferente para cada clase durante el entrenamiento del modelo. Esto modifica la función de pérdida del modelo para que se penalice más o menos la clasificación incorrecta de ciertas clases, dependiendo de los pesos que se les asignen. En este caso:\n",
+    "        -   Clase 0: se le asigna el peso de 2, lo que significa que los errores en la clasificación de instancias de la clase 0 tienen un impacto 2 veces mayor que en la clase 1. \n",
+    "        -   Clase 1: se le asigna el peso de 1, que es el peso estándar, no modificando la función de pérdida.\n",
+    "4.  {0: 3, 1: 1}: en esta configuración he utilizado el diccionario {0: 3, 1: 1} para especificar un peso diferente para cada clase durante el entrenamiento del modelo. Esto modifica la función de pérdida del modelo para que se penalice más o menos la clasificación incorrecta de ciertas clases, dependiendo de los pesos que se les asignen. En este caso:\n",
+    "        -   Clase 0: se le asigna el peso de 3, lo que significa que los errores en la clasificación de instancias de la clase 0 tienen un impacto 3 veces mayor que en la clase 1. \n",
+    "        -   Clase 1: se le asigna el peso de 1, que es el peso estándar, no modificando la función de pérdida."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Entrenamiento, evaluación y resultados del modelo de árboles de decisión."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 96,
    "metadata": {},
@@ -333,6 +365,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Visualización del árbol generado por el modelo"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 97,
    "metadata": {},
@@ -353,6 +392,13 @@
     "plt.figure(figsize=(20,10))\n",
     "plot_tree(decision_tree, filled=True, feature_names=X_train.columns, class_names=[\"NO\", \"SI\"], rounded=True)\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Visualización y cálculo de la curva ROC del modelo de máquina de vectores soporte."
    ]
   },
   {
@@ -391,6 +437,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Visualización de la matriz de confusión con los resultados obtenidos con las predicciones del modelo de árboles de decisión."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 99,
    "metadata": {},
@@ -417,6 +470,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Se visualiza la comparación entre los valores reales y las predicciones del modelo de árboles de decisión."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 100,
    "metadata": {},
@@ -433,17 +493,17 @@
     }
    ],
    "source": [
-    "#Calculamos las frecuencias de las clases en los datos reales y predichos\n",
+    "#Se calculan las frecuencias de las clases en los datos reales y predichos\n",
     "real_class_counts = np.bincount(y_test)\n",
     "predicted_class_counts = np.bincount(y_pred)\n",
     "\n",
-    "#Nos aseguramos que los vectores tienen la misma longitud\n",
+    "#Se asegura que los vectores tienen la misma longitud\n",
     "max_length = max(len(real_class_counts), len(predicted_class_counts))\n",
     "real_class_counts = np.pad(real_class_counts, (0, max_length - len(real_class_counts)), 'constant')\n",
     "predicted_class_counts = np.pad(predicted_class_counts, (0, max_length - len(predicted_class_counts)), 'constant')\n",
     "class_labels = ['No Aprobado', 'Aprobado']\n",
     "\n",
-    "#Creación del diagrama de barras para la visualización de los datos\n",
+    "#Se crea del diagrama de barras para la visualización de los datos\n",
     "fig, ax = plt.subplots()\n",
     "bar_width = 0.35\n",
     "index = np.arange(len(class_labels))\n",
@@ -457,6 +517,13 @@
     "ax.legend()\n",
     "\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "paración 1 a 1 de los resultados reales con los resultados predichos."
    ]
   },
   {
