--- a/TFG/logisticreg.ipynb
+++ b/TFG/logisticreg.ipynb
@@ -31,6 +31,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Carga de los archivos train y test y visualización del conjunto de prueba."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -52,7 +59,7 @@
     "test_data = pd.read_excel('test.xlsx')\n",
     "\n",
     "#Visualización de los datos del dataset \"test\"\n",
-    "#Primero contamos los alumnos aprobados y los alumnos suspensos\n",
+    "#Primero se cuentan los alumnos aprobados y los alumnos suspensos\n",
     "aprobados = test_data[test_data['nota_final_aprobado'] == 'SI'].shape[0]\n",
     "suspensos = test_data[test_data['nota_final_aprobado'] == 'NO'].shape[0]\n",
     "\n",
@@ -494,7 +501,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Comparación 1 a 1 de los resultados reales con los resultados predichos"
+    "Comparación 1 a 1 de los resultados reales con los resultados predichos."
    ]
   },
   {
