--- a/TFG/svm.ipynb
+++ b/TFG/svm.ipynb
@@ -31,6 +31,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Carga de los archivos train y test y visualización del conjunto de prueba."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 76,
    "metadata": {},
@@ -52,7 +59,7 @@
     "test_data = pd.read_excel('test.xlsx')\n",
     "\n",
     "#Visualización de los datos del dataset \"test\"\n",
-    "#Primero contamos los alumnos aprobados y los alumnos suspensos\n",
+    "#Primero se cuentan los alumnos aprobados y los alumnos suspensos\n",
     "aprobados = test_data[test_data['nota_final_aprobado'] == 'SI'].shape[0]\n",
     "suspensos = test_data[test_data['nota_final_aprobado'] == 'NO'].shape[0]\n",
     "\n",
@@ -315,6 +322,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Entrenamiento, evaluación y resultados del modelo de máquina de vectores soporte."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 79,
    "metadata": {},
@@ -359,6 +373,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Visualización y cálculo de la curva ROC del modelo de máquina de vectores soporte."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 80,
    "metadata": {},
@@ -394,6 +415,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Visualización de la matriz de confusión con los resultados obtenidos con las predicciones del modelo de máquina de vectores soporte."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 81,
    "metadata": {},
@@ -417,6 +445,13 @@
     "plt.ylabel('Etiqueta real')\n",
     "plt.title('Matriz de confusión - SVM')\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Se visualiza la comparación entre los valores reales y las predicciones del modelo de máquina de vectores soporte."
    ]
   },
   {
@@ -460,6 +495,13 @@
     "ax.legend()\n",
     "\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Comparación 1 a 1 de los resultados reales con los resultados predichos."
    ]
   },
   {
