--- a/TFG/xgboost.ipynb
+++ b/TFG/xgboost.ipynb
@@ -31,6 +31,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Carga de los archivos train y test y visualización del conjunto de prueba."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 84,
    "metadata": {},
@@ -52,7 +59,7 @@
     "test_data = pd.read_excel('test.xlsx')\n",
     "\n",
     "#Visualización de los datos del dataset \"test\"\n",
-    "#Primero contamos los alumnos aprobados y los alumnos suspensos\n",
+    "#Primero se cuentan los alumnos aprobados y los alumnos suspensos\n",
     "aprobados = test_data[test_data['nota_final_aprobado'] == 'SI'].shape[0]\n",
     "suspensos = test_data[test_data['nota_final_aprobado'] == 'NO'].shape[0]\n",
     "\n",
@@ -245,6 +252,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Se obtienen los mejores hiperparámetros a través de una optimización bayesiana"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 86,
    "metadata": {},
@@ -416,7 +430,7 @@
     }
    ],
    "source": [
-    "# Asumiendo que ya has definido los dataframes train_data y test_data\n",
+    "# Se definen las variables independientes X de la variable objetivo Y que será la variable 'nota_final_aprobado' de cada dataframe\n",
     "encoder = LabelEncoder()\n",
     "train_data['nota_final_aprobado'] = encoder.fit_transform(train_data['nota_final_aprobado'])\n",
     "test_data['nota_final_aprobado'] = encoder.transform(test_data['nota_final_aprobado'])\n",
@@ -426,17 +440,17 @@
     "X_test = test_data.drop('nota_final_aprobado', axis=1)\n",
     "y_test = test_data['nota_final_aprobado']\n",
     "\n",
-    "# Normalización de los datos\n",
+    "# Se normalizan los datos\n",
     "scaler = MinMaxScaler()\n",
     "X_train_scaled = scaler.fit_transform(X_train)\n",
     "X_test_scaled = scaler.transform(X_test)\n",
     "\n",
     "# Función objetivo para Optuna\n",
     "def objective(trial):\n",
-    "    #Parámetros que se desean optimizar\n",
+    "    # Parámetros que se desean optimizar\n",
     "    n_estimators = trial.suggest_int('n_estimators', 50, 300)\n",
     "    learning_rate = trial.suggest_loguniform('learning_rate', 0.01, 0.3)\n",
-    "    #Se define el modelo con los hiperparámetros\n",
+    "    # Se define el modelo con los hiperparámetros\n",
     "    model = xgb.XGBClassifier(\n",
     "        n_estimators=n_estimators,\n",
     "        learning_rate=learning_rate,\n",
@@ -453,7 +467,7 @@
     "optimizacion = optuna.create_study(direction='maximize')\n",
     "optimizacion.optimize(objective, n_trials=50)\n",
     "\n",
-    "#Mejores hiperparámetros encontrados\n",
+    "# Mejores hiperparámetros encontrados\n",
     "print(\"Parámetros del mejor intento:\", optimizacion.best_trial.params)\n",
     "print(\"Mejor Accuracy del mejor intento:\", optimizacion.best_trial.value)"
    ]
@@ -496,12 +510,11 @@
     }
    ],
    "source": [
-    "# Configuración del modelo XGBoost\n",
     "XGBoost = xgb.XGBClassifier(n_estimators=123, learning_rate=0.0119, max_depth=5, eval_metric='logloss')\n",
     "XGBoost.fit(X_train_scaled, y_train)\n",
     "y_pred = XGBoost.predict(X_test_scaled)\n",
     "\n",
-    "#Se imprime en pantalla el f1-score, accuracy, recall y el classification report\n",
+    "# Se imprime en pantalla el f1-score, accuracy, recall y el classification report\n",
     "accuracy = accuracy_score(y_test, y_pred)\n",
     "score = f1_score(y_test, y_pred)\n",
     "recall = recall_score(y_test, y_pred)\n",
@@ -510,6 +523,13 @@
     "print(\"F1-Score:\", score)\n",
     "print(\"Recall:\", recall)\n",
     "print(\"Classification Report\\n\", class_report)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Visualización y cálculo de la curva ROC del modelo de xgboost."
    ]
   },
   {
@@ -548,6 +568,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Visualización de la matriz de confusión con los resultados obtenidos con las predicciones del modelo de xgboost."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 89,
    "metadata": {},
@@ -574,6 +601,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Se visualiza la comparación entre los valores reales y las predicciones del modelo de xgboost."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 90,
    "metadata": {},
@@ -590,11 +624,11 @@
     }
    ],
    "source": [
-    "#Calculamos las frecuencias de las clases en los datos reales y predichos\n",
+    "#Se calculan las frecuencias de las clases en los datos reales y predichos\n",
     "real_class_counts = np.bincount(y_test)\n",
     "predicted_class_counts = np.bincount(y_pred)\n",
     "\n",
-    "#Nos aseguramos que los vectores tienen la misma longitud\n",
+    "#Se aseguram que los vectores tienen la misma longitud\n",
     "max_length = max(len(real_class_counts), len(predicted_class_counts))\n",
     "real_class_counts = np.pad(real_class_counts, (0, max_length - len(real_class_counts)), 'constant')\n",
     "predicted_class_counts = np.pad(predicted_class_counts, (0, max_length - len(predicted_class_counts)), 'constant')\n",
@@ -612,8 +646,14 @@
     "ax.set_xticks(index + bar_width / 2)\n",
     "ax.set_xticklabels(class_labels)\n",
     "ax.legend()\n",
-    "\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "paración 1 a 1 de los resultados reales con los resultados predichos."
    ]
   },
   {
