--- a/TFG/logisticreg.ipynb
+++ b/TFG/logisticreg.ipynb
@@ -356,7 +356,7 @@
    "source": [
     "#Se entrena el modelo con la ponderación de clase {0: 2, 1: 1} y evaluamos el modelo en el conjunto de prueba\n",
     "cw = {0: 2, 1: 1}\n",
-    "model = LogisticRegression(class_weight=cw, max_iter=12)\n",
+    "model = LogisticRegression(class_weight=cw, max_iter=12,random_state=42)\n",
     "model.fit(X_train_scaled, y_train)\n",
     "y_pred = model.predict(X_test_scaled)\n",
     "\n",
