--- a/TFG/train_test.ipynb
+++ b/TFG/train_test.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -144,7 +144,7 @@
        "4        viewed        course     web  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -157,7 +157,7 @@
     "#Semana 4: df_train_xlsx = './Datos_TFG/datos_correctos/semanas/SEMANA4_81_89_96.xlsx'\n",
     "#Semana 5: df_train_xlsx = './Datos_TFG/datos_correctos/semanas/SEMANA5_81_89_96.xlsx'\n",
     "\n",
-    "df_train_xlsx = './Datos_TFG/datos_correctos/semanas/SEMANA1_81_89_96.xlsx'\n",
+    "df_train_xlsx = './Datos_TFG/datos_correctos/semanas/SEMANA4_81_89_96.xlsx'\n",
     "df_train = pd.read_excel(df_train_xlsx)\n",
     "df_train.head()"
    ]
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -207,43 +207,32 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>5237</th>\n",
-       "      <td>129</td>\n",
-       "      <td>2021-09-12</td>\n",
-       "      <td>1900-01-01 11:52:10</td>\n",
-       "      <td>mod_assign</td>\n",
+       "      <th>23289</th>\n",
+       "      <td>128</td>\n",
+       "      <td>2021-10-03</td>\n",
+       "      <td>1900-01-01 15:26:24</td>\n",
+       "      <td>mod_resource</td>\n",
        "      <td>NaN</td>\n",
        "      <td>viewed</td>\n",
        "      <td>course_module</td>\n",
        "      <td>web</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5238</th>\n",
-       "      <td>129</td>\n",
-       "      <td>2021-09-12</td>\n",
-       "      <td>1900-01-01 11:52:36</td>\n",
-       "      <td>mod_assign</td>\n",
+       "      <th>23290</th>\n",
+       "      <td>128</td>\n",
+       "      <td>2021-10-03</td>\n",
+       "      <td>1900-01-01 15:26:46</td>\n",
+       "      <td>mod_resource</td>\n",
        "      <td>NaN</td>\n",
        "      <td>viewed</td>\n",
        "      <td>course_module</td>\n",
        "      <td>web</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5239</th>\n",
-       "      <td>129</td>\n",
-       "      <td>2021-09-12</td>\n",
-       "      <td>1900-01-01 11:52:36</td>\n",
-       "      <td>assignsubmission_file</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>uploaded</td>\n",
-       "      <td>assessable</td>\n",
-       "      <td>web</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5240</th>\n",
-       "      <td>129</td>\n",
-       "      <td>2021-09-12</td>\n",
-       "      <td>1900-01-01 11:52:36</td>\n",
+       "      <th>23291</th>\n",
+       "      <td>128</td>\n",
+       "      <td>2021-10-03</td>\n",
+       "      <td>1900-01-01 16:33:01</td>\n",
        "      <td>mod_assign</td>\n",
        "      <td>NaN</td>\n",
        "      <td>submitted</td>\n",
@@ -251,10 +240,21 @@
        "      <td>web</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5241</th>\n",
-       "      <td>129</td>\n",
-       "      <td>2021-09-12</td>\n",
-       "      <td>1900-01-01 11:52:36</td>\n",
+       "      <th>23292</th>\n",
+       "      <td>128</td>\n",
+       "      <td>2021-10-03</td>\n",
+       "      <td>1900-01-01 16:33:01</td>\n",
+       "      <td>assignsubmission_file</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>uploaded</td>\n",
+       "      <td>assessable</td>\n",
+       "      <td>web</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23293</th>\n",
+       "      <td>128</td>\n",
+       "      <td>2021-10-03</td>\n",
+       "      <td>1900-01-01 16:33:01</td>\n",
        "      <td>assignsubmission_file</td>\n",
        "      <td>NaN</td>\n",
        "      <td>created</td>\n",
@@ -266,22 +266,22 @@
        "</div>"
       ],
       "text/plain": [
-       "      login_est      fecha                hora       moodle_component  \\\n",
-       "5237        129 2021-09-12 1900-01-01 11:52:10             mod_assign   \n",
-       "5238        129 2021-09-12 1900-01-01 11:52:36             mod_assign   \n",
-       "5239        129 2021-09-12 1900-01-01 11:52:36  assignsubmission_file   \n",
-       "5240        129 2021-09-12 1900-01-01 11:52:36             mod_assign   \n",
-       "5241        129 2021-09-12 1900-01-01 11:52:36  assignsubmission_file   \n",
+       "       login_est      fecha                hora       moodle_component  \\\n",
+       "23289        128 2021-10-03 1900-01-01 15:26:24           mod_resource   \n",
+       "23290        128 2021-10-03 1900-01-01 15:26:46           mod_resource   \n",
+       "23291        128 2021-10-03 1900-01-01 16:33:01             mod_assign   \n",
+       "23292        128 2021-10-03 1900-01-01 16:33:01  assignsubmission_file   \n",
+       "23293        128 2021-10-03 1900-01-01 16:33:01  assignsubmission_file   \n",
        "\n",
-       "     moodle_resource_nombre moodle_action  moodle_target process  \n",
-       "5237                    NaN        viewed  course_module     web  \n",
-       "5238                    NaN        viewed  course_module     web  \n",
-       "5239                    NaN      uploaded     assessable     web  \n",
-       "5240                    NaN     submitted     assessable     web  \n",
-       "5241                    NaN       created     submission     web  "
+       "      moodle_resource_nombre moodle_action  moodle_target process  \n",
+       "23289                    NaN        viewed  course_module     web  \n",
+       "23290                    NaN        viewed  course_module     web  \n",
+       "23291                    NaN     submitted     assessable     web  \n",
+       "23292                    NaN      uploaded     assessable     web  \n",
+       "23293                    NaN       created     submission     web  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -303,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -339,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -361,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -380,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -394,7 +394,10 @@
     "#La variable semanas contiene una lista con los ejercicios de las semanas 1, 2, 3, 4 y 5. Los posibles valores que se pueden añadir son: 'Week 1: Algorithms', 'Week 2: Flow diagrams',\n",
     "#'Week 3: Variables and arithmetic operators', 'Week 4: operators, casting and decision-making', 'Week 5: loops'.\n",
     "semanas = [\n",
-    "    'Week 1: Algorithms'\n",
+    "    'Week 1: Algorithms',\n",
+    "    'Week 2: Flow diagrams',\n",
+    "    'Week 3: Variables and arithmetic operators',\n",
+    "    'Week 4: operators, casting and decision-making'\n",
     "]\n",
     "\n",
     "#Acciones excluidas.\n",
@@ -405,7 +408,9 @@
     "\n",
     "#La variable wooclaps contiene una lista con las notas de los wooclap de cada semana. Los posibles valores que se pueden añadir son: 'wooclap_week2', 'wooclap_week3', 'wooclap_week4', 'wooclap_week5'.\n",
     "wooclaps = [\n",
-    "\n",
+    "    'wooclap_week2',\n",
+    "    'wooclap_week3',\n",
+    "    'wooclap_week4'\n",
     "]"
    ]
   },
@@ -418,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -479,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -589,7 +594,7 @@
        "4        viewed         course     web  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -602,7 +607,7 @@
     "#Semana 4: df_test_xlsx = './Datos_TFG/datos_correctos/semanas/SEMANA4_84.xlsx'\n",
     "#Semana 5: df_test_xlsx = './Datos_TFG/datos_correctos/semanas/SEMANA5_84.xlsx'\n",
     "\n",
-    "df_test_xlsx = './Datos_TFG/datos_correctos/semanas/SEMANA1_84.xlsx'\n",
+    "df_test_xlsx = './Datos_TFG/datos_correctos/semanas/SEMANA4_84.xlsx'\n",
     "df_test = pd.read_excel(df_test_xlsx)\n",
     "df_test.head()"
    ]
@@ -616,7 +621,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -652,21 +657,10 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>836</th>\n",
+       "      <th>4763</th>\n",
        "      <td>139</td>\n",
-       "      <td>2021-09-12</td>\n",
-       "      <td>1900-01-01 18:10:35</td>\n",
-       "      <td>assignsubmission_file</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>updated</td>\n",
-       "      <td>submission</td>\n",
-       "      <td>web</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>837</th>\n",
-       "      <td>154</td>\n",
-       "      <td>2021-09-12</td>\n",
-       "      <td>1900-01-01 12:07:57</td>\n",
+       "      <td>2021-10-03</td>\n",
+       "      <td>1900-01-01 18:23:13</td>\n",
        "      <td>assignsubmission_file</td>\n",
        "      <td>NaN</td>\n",
        "      <td>created</td>\n",
@@ -674,10 +668,10 @@
        "      <td>web</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>838</th>\n",
-       "      <td>153</td>\n",
-       "      <td>2021-09-12</td>\n",
-       "      <td>1900-01-01 12:13:26</td>\n",
+       "      <th>4764</th>\n",
+       "      <td>143</td>\n",
+       "      <td>2021-10-03</td>\n",
+       "      <td>1900-01-01 23:02:47</td>\n",
        "      <td>assignsubmission_file</td>\n",
        "      <td>NaN</td>\n",
        "      <td>created</td>\n",
@@ -685,10 +679,10 @@
        "      <td>web</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>839</th>\n",
+       "      <th>4765</th>\n",
        "      <td>130</td>\n",
-       "      <td>2021-09-12</td>\n",
-       "      <td>1900-01-01 21:05:41</td>\n",
+       "      <td>2021-10-03</td>\n",
+       "      <td>1900-01-01 21:22:52</td>\n",
        "      <td>assignsubmission_file</td>\n",
        "      <td>NaN</td>\n",
        "      <td>created</td>\n",
@@ -696,10 +690,21 @@
        "      <td>web</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>840</th>\n",
+       "      <th>4766</th>\n",
+       "      <td>150</td>\n",
+       "      <td>2021-10-03</td>\n",
+       "      <td>1900-01-01 20:11:55</td>\n",
+       "      <td>assignsubmission_file</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>created</td>\n",
+       "      <td>submission</td>\n",
+       "      <td>web</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4767</th>\n",
        "      <td>148</td>\n",
-       "      <td>2021-09-12</td>\n",
-       "      <td>1900-01-01 23:16:52</td>\n",
+       "      <td>2021-10-03</td>\n",
+       "      <td>1900-01-01 20:12:04</td>\n",
        "      <td>assignsubmission_file</td>\n",
        "      <td>NaN</td>\n",
        "      <td>created</td>\n",
@@ -711,22 +716,22 @@
        "</div>"
       ],
       "text/plain": [
-       "     login_est      fecha                hora       moodle_component  \\\n",
-       "836        139 2021-09-12 1900-01-01 18:10:35  assignsubmission_file   \n",
-       "837        154 2021-09-12 1900-01-01 12:07:57  assignsubmission_file   \n",
-       "838        153 2021-09-12 1900-01-01 12:13:26  assignsubmission_file   \n",
-       "839        130 2021-09-12 1900-01-01 21:05:41  assignsubmission_file   \n",
-       "840        148 2021-09-12 1900-01-01 23:16:52  assignsubmission_file   \n",
+       "      login_est      fecha                hora       moodle_component  \\\n",
+       "4763        139 2021-10-03 1900-01-01 18:23:13  assignsubmission_file   \n",
+       "4764        143 2021-10-03 1900-01-01 23:02:47  assignsubmission_file   \n",
+       "4765        130 2021-10-03 1900-01-01 21:22:52  assignsubmission_file   \n",
+       "4766        150 2021-10-03 1900-01-01 20:11:55  assignsubmission_file   \n",
+       "4767        148 2021-10-03 1900-01-01 20:12:04  assignsubmission_file   \n",
        "\n",
-       "    moodle_resource_nombre moodle_action moodle_target process  \n",
-       "836                    NaN       updated    submission     web  \n",
-       "837                    NaN       created    submission     web  \n",
-       "838                    NaN       created    submission     web  \n",
-       "839                    NaN       created    submission     web  \n",
-       "840                    NaN       created    submission     web  "
+       "     moodle_resource_nombre moodle_action moodle_target process  \n",
+       "4763                    NaN       created    submission     web  \n",
+       "4764                    NaN       created    submission     web  \n",
+       "4765                    NaN       created    submission     web  \n",
+       "4766                    NaN       created    submission     web  \n",
+       "4767                    NaN       created    submission     web  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -746,7 +751,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
